--- a/src/styles.css
+++ b/src/styles.css
@@ -406,7 +406,7 @@ body {
 /* PROJECT PAGE */
 .project-column {
   text-align: center;
-  margin: 30px 0px;
+  margin: 20px 0px;
   border-radius: 7px;
   flex-wrap: wrap;
 }
@@ -427,4 +427,19 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.logo-image {
+  height: 225px;
+  min-width: 150px;
+  margin: 0 10%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.project-column .logo-heading {
+  margin: 0 10%;
+  padding: 25px 0px;
+  border: none;
 }
