--- a/src/styles.css
+++ b/src/styles.css
@@ -377,6 +377,7 @@ body {
 
 .carousel-images {
   display: flex;
+  flex-wrap: wrap;
   max-width: 100%;
   overflow-x: hidden;
   justify-content: center;
@@ -388,7 +389,7 @@ body {
 }
 
 .carousel-image {
-  margin-right: 5%;
+  margin: 20px 25px;
   height: 150px;
   min-width: 150px;
   box-shadow: 1px 2px 10px rgb(0 0 0 / 23%);
