--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@
 }
 
 .body-content {
-  max-width: 1600px;
+  max-width: 1800px;
   margin: 0 auto;
 }
 
@@ -31,7 +31,7 @@ body {
   text-align: left;
   display: block;
   width: 100%;
-}
+} 
 
 .btn-primary {
   transition: .8s;
@@ -136,6 +136,7 @@ body {
 .welcome-right-hero {
   background: #f5f6f7;
   border-radius: 0px 7px 7px 0px;
+  padding: 0 5%;
 }
 
 .welcome-right-hero li {
@@ -189,7 +190,6 @@ body {
 .slide h3 {
   color: gray;
   font-weight: 500 !important;
-  font-size: 2vh;
 }
 
 .slide img {
@@ -219,10 +219,10 @@ body {
   content: "";
   background: white;
   display: block;
-  right: 46px;
-  top: 33px;
-  width: 25px;
-  height: 25px;
+  right: 44px;
+  top: 31px;
+  width: 22px;
+  height: 22px;
   border-radius: 50%;
   border: 3px solid RED;
   position: relative;
@@ -240,7 +240,7 @@ body {
     display: block;
     position: absolute;
     left: -19px;
-    top: 38px;
+    top: 33px;
     background: red;
     transform: scaleY(1);
     transition: transform 0.4s ease 0s;
@@ -537,6 +537,9 @@ body {
   }
   .welcome-hero.welcome-right-hero {
     padding: 0 2rem !important;
+  }
+  .project-column h3 {
+    font-size: 4.5vw !important;
   }
 }
 
